[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "owid_cy"
version = "0.0.1"
dependencies = [
    "pandas~=2.3.2",
    "requests~=2.32.5",
]
[project.urls]
Homepage = "https://github.com/yehuthi/owid_cy"

[project.scripts]
owid_cy_cli = "owid_cy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
